delete function complete

--- a/src/main/resources/templates/tasks.html
+++ b/src/main/resources/templates/tasks.html
@@ -30,6 +30,7 @@
                         <span th:classappend="${task.completed} ? 'text-strikethrough'" th:text="${task.title}">Task Title</span>
                         <div>
                             <a th:href="@{/{id}/toggle(id =${task.id})}" class="btn btn-outline-secondary btn-sm">Toggle</a>
+                            <a th:href="@{/{id}/delete(id =${task.id})}" class="btn btn-danger ml-2 btn-sm">Delete</a>
                         </div>
                     </div>
                 </div>
